--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.17.0
   web_socket_channel: ^2.1.0
   syncfusion_flutter_charts: ^19.4.52
+  jwt_decode: ^0.3.1
 
     
 
