--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   syncfusion_flutter_charts: ^19.4.52
   jwt_decode: ^0.3.1
-
-    
+  percent_indicator: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -73,6 +72,8 @@ flutter:
     - assets/signup/login wtih.png
     - assets/signup/Rectangle 6317.png
     - assets/signup/Already have an account_.png
+    - assets/navbar/eclipse vector.png
+    - assets/navbar/Rectangle 6331.png
   # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
