graph interval WIP

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
     - assets/signup/Already have an account_.png
     - assets/navbar/eclipse vector.png
     - assets/navbar/Rectangle 6331.png
+    - assets/navbar/green.png
+    - assets/navbar/red.png
   # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
