--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,12 +74,25 @@ flutter:
     - assets/signup/Already have an account_.png
     - assets/navbar/eclipse vector.png
     - assets/navbar/Rectangle 6331.png
+    - assets/navbar/gold asset.png
     - assets/navbar/green.png
     - assets/navbar/red.png
     - assets/navbar/Oval 5 + Oval 5 Copy + Oval 5 Copy 3.png
     - assets/navbar/Rectangle 6.png
     - assets/navbar/Visa.png
     - assets/navbar/save button.png
+    - assets/navbar/topupbtn.png
+    - assets/navbar/withdrawtbn.png
+    - assets/navbar/withdraw btn.png
+    - assets/navbar/cancel btn.png
+    - assets/navbar/topup btn.png
+    - assets/navbar/gold 1.png
+    - assets/navbar/platinum.png
+    - assets/navbar/silver.png
+    - assets/navbar/buybtn.png
+    - assets/navbar/sellbtn.png
+    - assets/navbar/Vector.png
+    - assets/navbar/Rectangle 6332.png
   # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
