added adaptive screen for signup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,10 @@ flutter:
     - assets/signup/pc-person 1.png
     - assets/signup/18410 1.png
     - assets/signup/login wtih.png
-    - assets/signup/Rectangle 6317.png
+    - assets/signup/signup btn.png
+    - assets/signup/signup btn grey.png
+    - assets/signup/login button.png
+    - assets/signup/login button grey.png
     - assets/signup/Already have an account_.png
     - assets/navbar/eclipse vector.png
     - assets/navbar/Rectangle 6331.png
