--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.drc">
      <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="Commodify"
+        android:label="ComD5"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
