--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
      <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="ComD5"
-        android:icon="@mipmap/ic_launcher">
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher">        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
