--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   jwt_decode: ^0.3.1
   percent_indicator: ^4.0.0
   toggle_switch: ^1.4.0
-  flutter_keyboard_visibility: ^5.2.0
+  flutter_svg: ^1.0.3
+  lottie: ^1.2.2
+  animated_splash_screen: ^1.2.0
+  animated_text_kit: ^4.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -88,6 +91,7 @@ flutter:
     - assets/navbar/topupbtn.png
     - assets/navbar/withdrawtbn.png
     - assets/navbar/withdraw btn.png
+    - assets/navbar/withdraw btn.svg
     - assets/navbar/cancel btn.png
     - assets/navbar/topup btn.png
     - assets/navbar/gold 1.png
@@ -111,6 +115,9 @@ flutter:
     - assets/navbar/message.png
     - assets/navbar/Lock.png
     - assets/navbar/reset button.png
+    - assets/lottie/23662-laptop-animation-pink-navy-blue-white.json
+    - assets/navbar/Exclamation Mark.png
+    
   # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -129,6 +136,9 @@ flutter:
     - family: Robot
       fonts:
         - asset: assets/fonts/Roboto-Regular.ttf
+    - family: ReadexPro
+      fonts:
+        - asset: assets/fonts/ReadexPro-Medium.ttf
         # - asset: fonts/Schyler-Italic.ttf
         #   style: italic
   #   - family: Trajan Pro
