--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   lottie: ^1.2.2
   animated_splash_screen: ^1.2.0
   animated_text_kit: ^4.2.1
+  rename: ^2.0.1
+  connectivity_plus: ^2.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
