--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,8 +53,8 @@ android {
         applicationId "xyz.comd5.COMD5"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 2
+        versionName "1.0.2"
     }
 
     signingConfigs {
